=完善细节和注释02/14

--- a/lp.html
+++ b/lp.html
@@ -117,15 +117,15 @@
 						</div>
 						<div class="property">
 							<p id="p">姓名:</p>
-							<input id="add_name" type="text" />
+							<input id="add_name" type="text" style="font-size: 18px;"/>
 						</div>
 						<div class="property">
 							<p id="p">手机长号:</p>
-							<input id="add_lphone" type="text" />
+							<input id="add_lphone" type="text" style="font-size: 18px;"/>
 						</div>
 						<div class="property">
 							<p id="p">手机短号:</p>
-							<input id="add_sphone" type="text" />
+							<input id="add_sphone" type="text" style="font-size: 18px;"/>
 						</div>
 						<div class="property">
 							<input id="add_btn" type="button" value="添加" />
@@ -149,17 +149,17 @@
 						</div>
 						<div>
 							<span>姓名:</span>
-							<input id="input_name" type="text" style="width:349px;">
+							<input id="input_name" type="text" style="width:349px;font-size: 18px;">
 							<input id="update_name" type="button" value="修改">
 						</div>
 						<div>
 							<span>手机长号:</span>
-							<input id="input_lphone" type="text"  style="width:313px;">
+							<input id="input_lphone" type="text"  style="width:313px;font-size: 18px;">
 							<input id="update_lphone" type="button" value="修改">
 						</div>
 						<div>
 							<span>手机短号:</span>
-							<input id="input_sphone" type="text" style="width:313px;">
+							<input id="input_sphone" type="text" style="width:313px;font-size: 18px;">
 							<input id="update_sphone" type="button" value="修改">
 						</div>
 					</div>
@@ -167,7 +167,7 @@
 					<div id="delete" style="display:none; font-size: 18px;">
 						<div>
 							<span style="letter-spacing: 2px;">主键id:</span>
-							<input id="delete_id" type="text" style="width: 200px; height: 40px" placeholder="请输入数字">
+							<input id="delete_id" type="text" style="width: 200px; height: 40px; font-size: 18px;" placeholder="请输入数字">
 							<input id="delete_btn" type="button" value="删除">
 						</div>
 					</div>
@@ -196,34 +196,34 @@
 				<div id="table_content">
 					<div id="add_table">
 						<span>表名:</span>
-						<input id="add_table_input1" type="text" style="width: 400px; height: 40px;" placeholder="输入8位数字" />
+						<input id="add_table_input1" type="text" style="width: 400px; height: 40px;font-size: 18px;" placeholder="输入8位数字" />
 						<br/>
 						<br/>
 						<span>口令:</span>
-						<input id="add_table_input2" type="text" style="width: 400px; height: 40px;" />
+						<input id="add_table_input2" type="text" style="width: 400px; height: 40px;font-size: 18px;" />
 						<br/>
 						<br/>
 						<span>时间:</span>
-						<input id="add_table_input3" type="text" style="width: 400px; height: 40px;" placeholder="最大长度为20位"/>
+						<input id="add_table_input3" type="text" style="width: 400px; height: 40px;font-size: 18px;" placeholder="最大长度为20位"/>
 						<br/>
 						<br/>
 						<span>地点:</span>
-						<input id="add_table_input4" type="text" style="width: 400px; height: 40px;" placeholder="最大长度为20位" />
+						<input id="add_table_input4" type="text" style="width: 400px; height: 40px;font-size: 18px;" placeholder="最大长度为20位" />
 						<br/>
 						<br/>
 						<input id="add_table_btn" type="button" value="添加表" style="height: 40px;width: 400px; letter-spacing: 8px;"/>
 					</div>
 					<div id="delete_table" style="display:none">
 						<span>表名:</span>
-						<input id="delete_table_input" type="text" style="width: 249px; height: 40px;" />
+						<input id="delete_table_input" type="text" style="width: 249px; height: 40px; font-size: 18px;" />
 						<input id="delete_table_btn" type="button" value="删除表" style="height: 40px;width: 100px;" />
 					</div>
 					<div id="set_table" style="display:none">
 						<span>表名:</span>
-						<input id="set_table_input" type="text" style="height: 40px;width: 249px;">
+						<input id="set_table_input" type="text" style="height: 40px;width: 249px; font-size: 18px;">
 						<input id="set_table_btn" type="button" value="设为活动表" style="height: 40px;width: 100px;"/><br/><br/>
 						<span>表名:</span>
-						<input id="remove_table_input" type="text" style="height: 40px;width: 249px;">
+						<input id="remove_table_input" type="text" style="height: 40px;width: 249px; font-size: 18px;">
 						<input id="remove_table_btn" type="button" value="取消活动表" style="height: 40px;width: 100px;"/>
 						<br/>
 						<br/>
@@ -243,22 +243,22 @@
 				<div id="user_content">
 					<div id="add_user">
 						<span>用户姓名：</span>
-						<input id="uname" type="text" style="height: 40px;width: 400px;" placeholder="字符，数字，下划线(最大长度为10位)">
+						<input id="uname" type="text" style="height: 40px;width: 400px; font-size: 20px;" placeholder="字符，数字，下划线(最大长度为10位)">
 						<span>输入密码：</span>
-						<input id="pwd_1" type="password" style="height: 40px;width: 400px;">
+						<input id="pwd_1" type="password" style="height: 40px;width: 400px;font-size: 18px;">
 						<span>确认密码：</span>
-						<input id="pwd_2" type="password" style="height: 40px;width: 400px;"><br/><br/>
+						<input id="pwd_2" type="password" style="height: 40px;width: 400px;font-size: 18px;"><br/><br/>
 						<input id="add_user_btn" type="button" value="添加用户" style="height: 40px;width: 400px;" />
 					</div>
 					<div id="delete_user" style="display:none">
 						<span>id:</span>
-						<input id="delete_user_input" type="text" style="height: 40px;width: 270px;">
+						<input id="delete_user_input" type="text" style="height: 40px;width: 270px;font-size: 18px;">
 						<input id="delete_user_btn" type="button" value="删除用户" style="height: 40px;width: 100px;" />
 					</div>
 					<div id="update_pwd" style="display:none">
 						<p style="text-indent: 150px;">修改当前用户密码</p><br/>
-						请输入新密码：<input id="pwd_input_1" type="password" style="height: 40px;width: 270px;"/><br/><br/>
-						再次输入密码：<input id="pwd_input_2" type="password" style="height: 40px;width: 270px;"/><br/><br/>
+						请输入新密码：<input id="pwd_input_1" type="password" style="height: 40px;width: 270px;font-size: 18px;"/><br/><br/>
+						再次输入密码：<input id="pwd_input_2" type="password" style="height: 40px;width: 270px;font-size: 18px;"/><br/><br/>
 						<input id="update_pwd_btn" type="button" value="修改密码" style="height: 40px;width: 400px;letter-spacing: 10px;" />
 					</div>
 					<div id="user_info" style="display:none">
