--- a/index.html
+++ b/index.html
@@ -51,12 +51,19 @@
 					<input id="reg_command" type="text" />
 				</div>
 				<div class="property">
-					<p id="p">学院:(必须点击一次)</p>
+					<p id="p">地址:</p>
+					<select id="reg_select_addr">
+					  <option value ="连平" selected="selected">连平</option>
+					  <option value ="忠信">忠信</option>
+					</select>
+				</div>
+				<div class="property">
+					<p id="p">学院:</p>
 					<select id="reg_select">
-					  <option value ="volvo">江北校区</option>
-					  <option value ="saab">梅师</option>
-					  <option value="opel">医学院</option>
-					  <option value="audi">江南校区</option>
+					  <option value ="江北校区" selected="selected">江北校区</option>
+					  <option value ="梅师">梅师</option>
+					  <option value="医学院">医学院</option>
+					  <option value="江南校区">江南校区</option>
 					</select>
 				</div>
 				<div class="property">
